style(340px-mq): Added a media query at 340px width screen to avoid overflowing of Remember me and Forgot password buttons

--- a/style.css
+++ b/style.css
@@ -136,3 +136,11 @@ form {
   font-weight: 700;
   color: white;
 }
+
+@media screen and (max-width: 340px) {
+  .direct {
+    flex-direction: column;
+    gap: 4px;
+    text-align: center;
+  }
+}
